--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
@@ -741,7 +741,7 @@
     "LabelQuality": "Qualit\u00e9:",
     "HeaderSettings": "Param\u00e8tres",
     "OptionAutomaticallySyncNewContent": "Synchroniser automatiquement le nouveau contenu",
-    "OptionAutomaticallySyncNewContentHelp": "Les nouveaux contenus ajout\u00e9s \u00e0 cette cat\u00e9gorie seront automatiquement synchronis\u00e9s avec le p\u00e9riph\u00e9rique.",
+    "OptionAutomaticallySyncNewContentHelp": "Les nouveaux contenus ajout\u00e9s \u00e0 cette cat\u00e9gorie seront automatiquement synchronis\u00e9s avec l'appareil.",
     "OptionSyncUnwatchedVideosOnly": "Synchroniser seulement les vid\u00e9os non lues.",
     "OptionSyncUnwatchedVideosOnlyHelp": "Seulement les vid\u00e9os non lus seront synchronis\u00e9es et seront supprim\u00e9es du p\u00e9riph\u00e9rique au fur et \u00e0 mesure qu'elles sont lus.",
     "LabelItemLimit": "Maximum d'\u00e9l\u00e9ments :",
@@ -767,21 +767,21 @@
     "TabInfo": "Info",
     "TabCast": "Distribution",
     "TabScenes": "Sc\u00e8nes",
-    "HeaderUnlockApp": "Unlock App",
-    "MessageUnlockAppWithPurchase": "Unlock the full features of the app with a small one-time purchase.",
-    "MessageUnlockAppWithPurchaseOrSupporter": "Unlock the full features of the app with a small one-time purchase, or by signing in with an active Emby Supporter Membership.",
-    "MessageUnlockAppWithSupporter": "Unlock the full features of the app by signing in with an active Emby Supporter Membership.",
-    "MessageToValidateSupporter": "If you have an active Emby Supporter Membership, simply sign into the app using your Wifi connection within your home network.",
-    "MessagePaymentServicesUnavailable": "Payment services are currently unavailable. Please try again later.",
-    "ButtonUnlockWithSupporter": "Sign in with Emby Supporter Membership",
-    "MessagePleaseSignInLocalNetwork": "Before proceeding, please ensure that you're connected to your local network using a Wifi or LAN connection.",
-    "ButtonUnlockWithPurchase": "Unlock with Purchase",
-    "MessageLiveTvGuideRequiresUnlock": "The Live TV Guide is currently limited to {0} channels. Click the unlock button to learn how to enjoy the full experience.",
-    "OptionEnableFullscreen": "Enable Fullscreen",
-    "ButtonServer": "Server",
+    "HeaderUnlockApp": "D\u00e9verrouiller l'App",
+    "MessageUnlockAppWithPurchase": "D\u00e9verrouillez toutes les fonctionnalit\u00e9s de l'app en un seul petit achat.",
+    "MessageUnlockAppWithPurchaseOrSupporter": "D\u00e9verrouillez toutes les fonctionnalit\u00e9s de l'app en un seul petit achat, ou en vous connectant avec un compte de supporteur actif d'Emby.",
+    "MessageUnlockAppWithSupporter": "D\u00e9verrouillez toutes les fonctionnalit\u00e9s de l'app en vous connectant avec un compte de supporteur actif d'Emby.",
+    "MessageToValidateSupporter": "Si vos poss\u00e9dez un compte actif de supporteur Emby, connectez-vous simplement avec la connexion Wifi de votre r\u00e9seau domestique.",
+    "MessagePaymentServicesUnavailable": "Les services de paiement sont actuellement indisponibles. Merci de r\u00e9essayer ult\u00e9rieurement",
+    "ButtonUnlockWithSupporter": "Connectez-vous avec votre compte de supporteur Emby.",
+    "MessagePleaseSignInLocalNetwork": "Avant de continuer, veuillez vous assurer que vous \u00eates connect\u00e9s sur votre r\u00e9seau local en Wifi ou LAN.",
+    "ButtonUnlockWithPurchase": "D\u00e9verrouillez par un achat.",
+    "MessageLiveTvGuideRequiresUnlock": "Le Guide TV en direct est actuellement limit\u00e9 \u00e0 {0} cha\u00eenes. Cliquez sur le bouton d\u00e9verrouiller pour d\u00e9couvrir comment profiter de l'ensemble.",
+    "OptionEnableFullscreen": "Activer le plein \u00e9cran",
+    "ButtonServer": "Serveur",
     "HeaderAdmin": "Admin",
-    "HeaderLibrary": "Library",
-    "HeaderMedia": "Media",
-    "ButtonInbox": "Inbox",
+    "HeaderLibrary": "Biblioth\u00e8que",
+    "HeaderMedia": "M\u00e9dia",
+    "ButtonInbox": "Bo\u00eete de r\u00e9ception",
     "HeaderAdvanced": "Avanc\u00e9"
 }
