--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
@@ -713,7 +713,7 @@
     "MessageInvitationSentToNewUser": "Eine Email wurde an {0} mit einer Einladung zur Anmeldung an Emby gesendet.",
     "HeaderConnectionFailure": "Verbindungsfehler",
     "MessageUnableToConnectToServer": "Wir k\u00f6nnen gerade keine Verbindung zum gew\u00e4hlten Server herstellen. Bitte stellen Sie sicher das dieser l\u00e4uft und versuchen Sie es erneut.",
-    "ButtonSelectServer": "W\u00e4hle Server",
+    "ButtonSelectServer": "Select Server",
     "MessagePluginConfigurationRequiresLocalAccess": "Melde dich bitte direkt an deinem lokalen Server an, um dieses Plugin konfigurieren zu k\u00f6nnen.",
     "MessageLoggedOutParentalControl": "Der Zugriff ist derzeit eingeschr\u00e4nkt. Bitte versuche es sp\u00e4ter erneut.",
     "DefaultErrorMessage": "Es gab einen Fehler beim verarbeiten der Anfrage. Bitte versuche es sp\u00e4ter erneut.",
@@ -741,7 +741,7 @@
     "LabelQuality": "Qualit\u00e4t:",
     "HeaderSettings": "Einstellungen",
     "OptionAutomaticallySyncNewContent": "Synchronisiere neue Inhalte automatisch",
-    "OptionAutomaticallySyncNewContentHelp": "Neue Inhalte dieser Kategorie werden automatisch mit dem Ger\u00e4t synchronisiert.",
+    "OptionAutomaticallySyncNewContentHelp": "New content added to will be automatically synced to the device.",
     "OptionSyncUnwatchedVideosOnly": "Synchronisiere nur ungesehene Videos.",
     "OptionSyncUnwatchedVideosOnlyHelp": "Nur ungesehene Video werden synchronisiert. Videos werden entfernt sobald diese auf dem Ger\u00e4t angeschaut wurden.",
     "LabelItemLimit": "Maximale Anzahl:",
@@ -776,6 +776,7 @@
     "ButtonUnlockWithSupporter": "Anmelden mit Emby Unterst\u00fctzer Mitgliedschaft",
     "MessagePleaseSignInLocalNetwork": "Bevor Sie fortsetzen sollten Sie sicher sein, dass Sie mit Ihrem Heimnetzwerk verbunden sind.",
     "ButtonUnlockWithPurchase": "Freischalten durch Kauf",
+    "ButtonUnlockPrice": "Unlock {0}",
     "MessageLiveTvGuideRequiresUnlock": "Ihr TV-Guide ist begrenzt auf {0} Kan\u00e4le. Klicken Sie auf die Freischalten Schaltfl\u00e4che um weitere Informationen zu erhalten.",
     "OptionEnableFullscreen": "Aktivieren Vollbild",
     "ButtonServer": "Server",
@@ -783,5 +784,15 @@
     "HeaderLibrary": "Bibliothek",
     "HeaderMedia": "Medien",
     "ButtonInbox": "Posteingang",
-    "HeaderAdvanced": "Erweitert"
+    "HeaderAdvanced": "Erweitert",
+    "HeaderSaySomethingLike": "Say Something Like...",
+    "ButtonTryAgain": "Try Again",
+    "HeaderYouSaid": "You Said...",
+    "MessageWeDidntRecognizeCommand": "We're sorry, we didn't recognize that command.",
+    "MessageIfYouBlockedVoice": "If you denied voice access to the app you'll need to reconfigure before trying again.",
+    "MessageNoItemsFound": "No items found.",
+    "ButtonManageServer": "Manage Server",
+    "ButtonPreferences": "Preferences",
+    "ButtonViewArtist": "View artist",
+    "ButtonViewAlbum": "View album"
 }
