--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/kk.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/kk.json
@@ -776,6 +776,7 @@
     "ButtonUnlockWithSupporter": "Emby \u0436\u0430\u049b\u0442\u0430\u0443\u0448\u044b \u043c\u04af\u0448\u0435\u043b\u0456\u0433\u0456\u043c\u0435\u043d \u043a\u0456\u0440\u0443",
     "MessagePleaseSignInLocalNetwork": "\u041e\u0440\u044b\u043d\u0434\u0430\u043c\u0430\u0441 \u0431\u04b1\u0440\u044b\u043d, \u0436\u0435\u0440\u0433\u0456\u043b\u0456\u043a\u0442\u0456 \u0436\u0435\u043b\u0456\u0433\u0435 Wifi \u043d\u0435\u043c\u0435\u0441\u0435 LAN \u0431\u0430\u0439\u043b\u0430\u043d\u044b\u0441\u044b\u043d \u043f\u0430\u0439\u0434\u0430\u043b\u0430\u043d\u044b\u043f \u049b\u043e\u0441\u044b\u043b\u0493\u0430\u043d\u044b\u04a3\u044b\u0437\u0434\u044b \u049b\u0430\u043c\u0442\u0430\u043c\u0430\u0441\u044b\u0437 \u0435\u0442\u0456\u04a3\u0456\u0437.",
     "ButtonUnlockWithPurchase": "\u0421\u0430\u0442\u044b\u043f \u0430\u043b\u0443\u043c\u0435\u043d \u049b\u04b1\u0440\u0441\u0430\u0443\u0434\u0430\u043d \u0431\u043e\u0441\u0430\u0442\u0443",
+    "ButtonUnlockPrice": "Unlock {0}",
     "MessageLiveTvGuideRequiresUnlock": "\u042d\u0444\u0438\u0440\u043b\u0456\u043a \u0422\u0414 \u0430\u043d\u044b\u049b\u0442\u0430\u0493\u044b\u0448\u044b \u049b\u0430\u0437\u0456\u0440\u0433\u0456 \u0443\u0430\u049b\u044b\u0442\u0442\u0430 {0} \u0430\u0440\u043d\u0430\u043b\u0430\u0440 \u0448\u0435\u043a\u0442\u0435\u043b\u0435\u0434\u0456. \u0422\u043e\u043b\u044b\u049b \u0442\u04d9\u0436\u0440\u0438\u0431\u0435\u0441\u0456\u043d \u04af\u0439\u0440\u0435\u043d\u0443 \u04af\u0448\u0456\u043d \u049a\u04b1\u0440\u0441\u0430\u0443\u044b\u043d \u0431\u043e\u0441\u0430\u0442\u0443 \u0442\u04af\u0439\u043c\u0435\u0448\u0456\u0433\u0456\u043d \u0431\u0430\u0441\u044b\u04a3\u044b\u0437.",
     "OptionEnableFullscreen": "\u0422\u043e\u043b\u044b\u049b \u044d\u043a\u0440\u0430\u043d\u0434\u044b \u049b\u043e\u0441\u0443",
     "ButtonServer": "\u0421\u0435\u0440\u0432\u0435\u0440",
@@ -783,5 +784,15 @@
     "HeaderLibrary": "\u0422\u0430\u0441\u044b\u0493\u044b\u0448\u0445\u0430\u043d\u0430",
     "HeaderMedia": "\u0422\u0430\u0441\u044b\u0493\u044b\u0448\u0434\u0435\u0440\u0435\u043a\u0442\u0435\u0440",
     "ButtonInbox": "\u041a\u0456\u0440\u0435\u0441\u0456\u043d",
-    "HeaderAdvanced": "\u041a\u0435\u04a3\u0435\u0439\u0442\u0456\u043b\u0433\u0435\u043d"
+    "HeaderAdvanced": "\u041a\u0435\u04a3\u0435\u0439\u0442\u0456\u043b\u0433\u0435\u043d",
+    "HeaderSaySomethingLike": "Say Something Like...",
+    "ButtonTryAgain": "Try Again",
+    "HeaderYouSaid": "You Said...",
+    "MessageWeDidntRecognizeCommand": "We're sorry, we didn't recognize that command.",
+    "MessageIfYouBlockedVoice": "If you denied voice access to the app you'll need to reconfigure before trying again.",
+    "MessageNoItemsFound": "No items found.",
+    "ButtonManageServer": "Manage Server",
+    "ButtonPreferences": "Preferences",
+    "ButtonViewArtist": "View artist",
+    "ButtonViewAlbum": "View album"
 }
