--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
@@ -713,7 +713,7 @@
     "MessageInvitationSentToNewUser": "Een email is verzonden naar {0} met een uitnodiging om aan te melden bij Emby.",
     "HeaderConnectionFailure": "Verbindingsfout",
     "MessageUnableToConnectToServer": "Het is momenteel niet mogelijk met de geselecteerde server te verbinden. Controleer dat deze draait en probeer het opnieuw.",
-    "ButtonSelectServer": "Selecteer server",
+    "ButtonSelectServer": "Select Server",
     "MessagePluginConfigurationRequiresLocalAccess": "Meld svp. op de lokale server aan om deze plugin te configureren.",
     "MessageLoggedOutParentalControl": "Toegang is momenteel bepertk, probeer later opnieuw.",
     "DefaultErrorMessage": "Er is een fout opgetreden. Probeer later opnieuw.",
@@ -741,7 +741,7 @@
     "LabelQuality": "Kwaliteit",
     "HeaderSettings": "Instellingen",
     "OptionAutomaticallySyncNewContent": "Nieuwe inhoud automatisch synchroniseren",
-    "OptionAutomaticallySyncNewContentHelp": "Nieuwe inhoud toegevoegd aan deze categorie wordt automatisch gesynchroniseerd met het apparaat.",
+    "OptionAutomaticallySyncNewContentHelp": "New content added to will be automatically synced to the device.",
     "OptionSyncUnwatchedVideosOnly": "Synchroniseer alleen onbekeken video's",
     "OptionSyncUnwatchedVideosOnlyHelp": "Alleen onbekeken video's zullen worden gesynchroniseerd en van het apparaat worden verwijderd als ze bekeken zijn.",
     "LabelItemLimit": "Item limiet:",
@@ -776,6 +776,7 @@
     "ButtonUnlockWithSupporter": "Meld aan met je Emby Supporter Lidmaatschap",
     "MessagePleaseSignInLocalNetwork": "Controleer of je verbonden bent met je lokale netwerk voordat je verder gaat.",
     "ButtonUnlockWithPurchase": "Geef vrij met een aankoop",
+    "ButtonUnlockPrice": "Unlock {0}",
     "MessageLiveTvGuideRequiresUnlock": "De Live TV Gids is momenteel gelimiteerd tot {0} kanalen. Klik op de Geef vrij knop om te zien hoe je deze limiet op kan heffen.",
     "OptionEnableFullscreen": "Schakel volledig scherm in",
     "ButtonServer": "Server",
@@ -783,5 +784,15 @@
     "HeaderLibrary": "Bibliotheek",
     "HeaderMedia": "Media",
     "ButtonInbox": "inbox",
-    "HeaderAdvanced": "Geavanceerd"
+    "HeaderAdvanced": "Geavanceerd",
+    "HeaderSaySomethingLike": "Say Something Like...",
+    "ButtonTryAgain": "Try Again",
+    "HeaderYouSaid": "You Said...",
+    "MessageWeDidntRecognizeCommand": "We're sorry, we didn't recognize that command.",
+    "MessageIfYouBlockedVoice": "If you denied voice access to the app you'll need to reconfigure before trying again.",
+    "MessageNoItemsFound": "No items found.",
+    "ButtonManageServer": "Manage Server",
+    "ButtonPreferences": "Preferences",
+    "ButtonViewArtist": "View artist",
+    "ButtonViewAlbum": "View album"
 }
