--- a/MediaBrowser.Server.Implementations/Localization/Server/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/fr.json
@@ -85,8 +85,8 @@
     "ButtonDonateWithPayPal": "Faire un don avec Paypal",
     "OptionDetectArchiveFilesAsMedia": "Reconna\u00eetre les fichiers archives comme m\u00e9dias",
     "OptionDetectArchiveFilesAsMediaHelp": "Activez cette option pour reconna\u00eetre les fichiers portant l'extension .rar ou .zip comme des fichiers de m\u00e9dias. ",
-    "LabelEnterConnectUserName": "Nom d'utilisateur ou adresse email :",
-    "LabelEnterConnectUserNameHelp": "C'est votre nom d'utilisateur et mot de passe de votre compte Emby  en ligne.",
+    "LabelEnterConnectUserName": "Nom d'utilisateur ou adresse mail :",
+    "LabelEnterConnectUserNameHelp": "C'est le nom d'utilisateur ou mot de passe de votre compte Emby en ligne.",
     "LabelEnableEnhancedMovies": "Activer le mode d'affichage \u00e9tendu des films",
     "LabelEnableEnhancedMoviesHelp": "Lorsque ce mode est activ\u00e9, les films seront affich\u00e9s comme des dossiers et incluront les bandes-annonces, les extras, l'\u00e9quipe de tournage et les autre contenus li\u00e9s.",
     "HeaderSyncJobInfo": "T\u00e2che de synchronisation",
@@ -1436,5 +1436,8 @@
     "HeaderColumns": "Colonnes",
     "ButtonReset": "R\u00e9initialiser",
     "OptionEnableExternalVideoPlayers": "Activer les lecteurs vid\u00e9o externes",
-    "ButtonUnlockGuide": "D\u00e9verrouiller le Guide"
+    "ButtonUnlockGuide": "D\u00e9verrouiller le Guide",
+    "LabelEnableFullScreen": "Activer le mode plein \u00e9cran",
+    "LabelEnableChromecastAc3Passthrough": "Activer le mode Chromecast AC3 Passthrough",
+    "LabelSyncPath": "Chemin du contenu synchronis\u00e9:"
 }
