--- a/MediaBrowser.Server.Implementations/Localization/Server/pt-BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/pt-BR.json
@@ -85,8 +85,8 @@
     "ButtonDonateWithPayPal": "Doe atrav\u00e9s do PayPal",
     "OptionDetectArchiveFilesAsMedia": "Detectar arquivos compactados como m\u00eddia",
     "OptionDetectArchiveFilesAsMediaHelp": "Se ativado, arquivos com extens\u00f5es .rar e .zip ser\u00e3o detectados como arquivos de m\u00eddia.",
-    "LabelEnterConnectUserName": "Nome de usu\u00e1rio ou email:",
-    "LabelEnterConnectUserNameHelp": "Esta \u00e9 a senha e o nome de usu\u00e1rio da sua conta online do Emby.",
+    "LabelEnterConnectUserName": "Username or email:",
+    "LabelEnterConnectUserNameHelp": "This is your Emby online account username or password.",
     "LabelEnableEnhancedMovies": "Ativar exibi\u00e7\u00f5es de filme avan\u00e7adas",
     "LabelEnableEnhancedMoviesHelp": "Quando ativado, os filmes ser\u00e3o exibidos como pastas para incluir trailers, extras, elenco & equipe e outros conte\u00fados relacionados.",
     "HeaderSyncJobInfo": "Tarefa de Sincroniza\u00e7\u00e3o",
@@ -1436,5 +1436,8 @@
     "HeaderColumns": "Colunas",
     "ButtonReset": "Redefinir",
     "OptionEnableExternalVideoPlayers": "Ativar reprodutores de v\u00eddeo externos",
-    "ButtonUnlockGuide": "Desbloquear Guia"
+    "ButtonUnlockGuide": "Desbloquear Guia",
+    "LabelEnableFullScreen": "Enable fullscreen mode",
+    "LabelEnableChromecastAc3Passthrough": "Enable Chromecast AC3 Passthrough",
+    "LabelSyncPath": "Synced content path:"
 }
