support in-app connect signup

--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
@@ -804,5 +804,9 @@
     "ButtonManageServer": "Manage Server",
     "ButtonPreferences": "Preferences",
     "ButtonViewArtist": "View artist",
-    "ButtonViewAlbum": "View album"
+    "ButtonViewAlbum": "View album",
+    "ErrorMessagePasswordNotMatchConfirm": "The password and password confirmation must match.",
+    "ErrorMessageUsernameInUse": "The username is already in use. Please choose a new name and try again.",
+    "ErrorMessageEmailInUse": "The email address is already in use. Please enter a new email address and try again, or use the forgot password feature.",
+    "MessageThankYouForConnectSignUp": "Thank you for signing up for Emby Connect. An email will be sent to your address with instructions on how to confirm your new account. Please confirm the account and then return here to sign in."
 }
